unpackaged/main/default/objects/Knowledge__kav/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>