unpackaged/main/default/objects/Knowledge__kav/fields/Audiencia_de_procedimiento__c.field-meta.xml
<CustomField>
    <fullName>Audiencia_de_procedimiento__c</fullName>
    <description>Use este campo para identificar quién sigue o ejecuta este procedimiento.</description>
    <inlineHelpText>¿Quien sigue este procedimiento?</inlineHelpText>
    <label>Audiencia de procedimiento</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>