unpackaged/main/default/objects/Knowledge__kav/recordTypes/Procedimiento_s.recordType-meta.xml
<RecordType>
    <fullName>Procedimiento_s</fullName>
    <active>true</active>
    <description>Instrucciones paso a paso</description>
    <label>Procedimiento_s</label>
</RecordType>