unpackaged/main/default/objects/Knowledge__kav/recordTypes/Procedimientos.recordType-meta.xml
<RecordType>
    <fullName>Procedimientos</fullName>
    <active>true</active>
    <description>Instrucciones paso a paso</description>
    <label>Procedimientos</label>
</RecordType>